# yplayer

./: CMakeLists.txt  README.md
cmake/: make.sh
docs/: YPlayer.drawio
include/api/: YPlayerSDK.h
include/common/: commonType.h
include/control/: DataStreamContext.h  Player.h  PlayerManager.h  SyncManager.h
include/decoder/: AudioSoftDecoder.h  IDecoder.h  SoftDecoder.h  VideoSoftDecoder.h
include/demuxer/: Demuxer.h
include/utils/: FrameQueue.h  IPacketSource.h  PacketQueue.h  YClock.h
src/api/: YPlayerSDK.cpp
src/control/: DataStreamContext.cpp  Player.cpp  PlayerManager.cpp  SyncManager.cpp
src/decoder/: SoftDecoder.cpp  VideoSoftDecoder.cpp
src/demuxer/: Demuxer.cpp
src/utils/: FrameQueue.cpp  PacketQueue.cpp  YClock.cpp
test/PacketQueueTest/: PacketQueueTest.cpp
tests/: PacketQueueTest.cpp
